|
Quick Lists
|
|
Bug ID:
|
6805427
|
|
Votes
|
0
|
|
Synopsis
|
adlc compiler may generate incorrect machnode emission code
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs15(b03),
7(b51) (Bug ID:2174482)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
2-High
|
|
Related Bugs
|
6467906
|
|
Submit Date
|
13-FEB-2009
|
|
Description
|
Memory allocation bug in adlc may cause 3rd and later KILLed 'instruct'
operands bound to a specific register being re-bound by the reg allocator to a
different register, thus causing incorrcet code generation.
Posted Date : 2009-02-13 17:32:49.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/0ad1cb407fa1
Posted Date : 2009-02-25 21:32:49.0
The fix is simply to compute a correct worst case size for the array based on the number of components.
Posted Date : 2009-02-26 22:00:45.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |