6805427: adlc compiler may generate incorrect machnode emission code

Reviewed-by: kvn, twisti